feat(infrastructure): initialize Docker environment
- Add docker-compose.yml for orchestrating microservices
- Configure shared network for service communication
- Set up volume management for persistent data
- Implement health checks for service dependencies
- Add database initialization script for PostgreSQL"
- Add Discovery Service Dockerfile with Eureka configuration
- Add User Service Dockerfile with JDK 17 and security setup
- Add Feedback Service Dockerfile with PostgreSQL integration
- Add Feedback Scoring Service Dockerfile with AI model setup

- Update service discovery endpoints for Docker networking
- Configure database connections for containerized environment
- Add MongoDB configuration for feedback scoring service
- Update .gitignore for Python and Java artifacts

Security:
- Externalize sensitive configurations
- Implement proper CORS settings
- Configure JWT token validation across services"

Technical details:
- Optimize layer caching for faster builds
- Configure proper health checks
- Set up resource limits and JVM options
- Implement multi-stage builds for smaller images"